test/inOwnType.slq

def main(){
	x:=array(3,0:ğ”¹);
	x:=x coerce !â„•^x.length; // error
	return x;
}
